# WG_Vectorization

avx2-filtering/: CMakeLists.txt  README.md
avx2-filtering/doc/: GeantV.md  example-run.txt
avx2-filtering/src/: avx2filter.cc  bench.cc  sort_net.h  sort_permvar.h  timer.h
dynamic-simd-scheduling/: LICENSE.TXT  README.TXT  aav_dynamic_blocked.cpp  aav_static.cpp  array_as_value.h  eev_dynamic_blocked.cpp  eev_dynamic_smoothed.cpp  eev_static.cpp  intr_dynamic.cpp  intr_static.cpp  main.h  simple_complex.h
vect-patterns-rwth/: Makefile.fill_lanes  Makefile.inner_loop_reduce  README  README.fill_lanes  README.inner_loop_reduce  fill_lanes-scalar.c  fill_lanes.c  inner_loop_reduce-scalar.c  inner_loop_reduce.c
vect-patterns-rwth/fill-lanes/: README  chunked.c  collect-compute.c  common.h  driver.c  intr.c  linearised.c  naive.c  scalar.c
